forgot to commit ;) adds forms and a basic starting point of a layout (search still doesn't work)

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,11 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+
+.post-body {
+    height: 5rem;
+}
+
+.post-body p {
+    flex-grow: 1;
+}
